# narrativa-bibliometrica

./: .gitignore  LICENSE  README.md  pyproject.toml
src/isciii_narrativo/: mcp_server.py
src/isciii_narrativo/core/: crossref_client.py  http.py  journal_metrics.py  metrics.py  models.py  narrative.py  openalex_client.py  pubmed_client.py  resolver.py  validator.py
src/isciii_narrativo/data/: jcr_2024.csv
src/isciii_narrativo/templates/: extended_es.jinja2  relevance_es.jinja2  short_es.jinja2
