[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isciii-narrativo"
version = "0.1.0"
description = "Open-mode MCP server to generate ISCIII-style quantitative paragraphs from DOIs/PMIDs using open bibliographic sources."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ISCIII Quant Open contributors"}]
keywords = ["MCP", "ISCIII", "CVA", "bibliometrics", "OpenAlex", "PubMed"]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "jinja2>=3.1.0",
  "tenacity>=8.2.0",
]

[project.scripts]
isciii-narrativo = "isciii_narrativo.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
isciii_narrativo = ["templates/*.jinja2", "data/*.csv"]
